= Version history =
x.x:

- added: publication and expiration date for pages (optional and admin setting)
- fixed: #1 Undefined function on pdf export
- fixed: small JS bug

1.0:

- first combined version of pages_export and pages_tree
- changed: layout of start.php to be more inline with Elgg