@@ -15,23 +15,23 @@
 
 	// do we have a selected page
 	if(pages_tools_is_valid_page($selected_page)){
-		$title = elgg_echo("pages:navigation");
-		
 		// make the navigation tree
-		pages_tools_register_navigation_tree($selected_page);
-		
-		// get the navigation menu
-		$menu = "<div id='pages-tools-navigation' class='hidden'>";
-		$menu .= elgg_view_menu("pages_nav", array("class" => "pages-nav", "sort_by" => "priority"));
-		$menu .= "</div>";
-		
-		$menu .= elgg_view("graphics/ajax_loader", array("hidden" => false));
-		
-		// load the correct JS/css
-		elgg_load_js("jquery.tree");
-		elgg_load_css("jquery.tree");
-		
-		// draw everything
-		echo elgg_view_module("aside", $title, $menu);
+		if(pages_tools_register_navigation_tree($selected_page)){
+			$title = elgg_echo("pages:navigation");
+			
+			// get the navigation menu
+			$menu = "<div id='pages-tools-navigation' class='hidden'>";
+			$menu .= elgg_view_menu("pages_nav", array("class" => "pages-nav", "sort_by" => "priority"));
+			$menu .= "</div>";
+			
+			$menu .= elgg_view("graphics/ajax_loader", array("hidden" => false));
+			
+			// load the correct JS/css
+			elgg_load_js("jquery.tree");
+			elgg_load_css("jquery.tree");
+			
+			// draw everything
+			echo elgg_view_module("aside", $title, $menu);
+		}
 	}
 	
